night mode: Fix loading-ellipsis visiblity on clicking "more topics".

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -496,3 +496,8 @@ body.night-mode #bots_lists_navbar .active a {
     border-color: #ddd;
     border-bottom-color: transparent;
 }
+
+body.night-mode .searching-for-more-topics img {
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
+}
